parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    FORMAT
    COMMENT
    OPEN_BRACKET
    TRANSLATION
    GOTO
    FOREACH
    ELSIF
    SUBSTITUTE
    SELECT
    FILE_HANDLING_OPTIONS
    COLON
    UNLESS
    DECREMENT_OP
    UNTIL
    WHITESPACE
    USER_INPUT_OP
    QUESTION_MARK
    REDO
    ARRAY
    HASH
    WRITE
    MATCH
    INCREMENT_OP
    CLOSE_BRACKET
    DO
    SYSTEM_COMMAND
    CONTINUE

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     start -> statements
Rule 3     block -> BLOCK_BEGIN statements BLOCK_ENDS
Rule 4     statements -> statement statements
Rule 5     statements -> statement
Rule 6     empty -> <empty>
Rule 7     statement -> assignment Marker
Rule 8     statement -> declaration Marker
Rule 9     statement -> returnStatement Marker
Rule 10    statement -> functionCall Marker
Rule 11    statement -> whileStatement Marker
Rule 12    statement -> forStatement Marker
Rule 13    statement -> printStatement Marker
Rule 14    statement -> functionStatement Marker
Rule 15    statement -> lastStatement Marker
Rule 16    statement -> nextStatement Marker
Rule 17    statement -> ifthen Marker
Rule 18    statement -> ifthenelse Marker
Rule 19    statement -> useStatement Marker
Rule 20    statement -> switchStatement Marker
Rule 21    useStatement -> USE IDENTIFIER SEMICOLON
Rule 22    switchStatement -> SWITCH expression BLOCK_BEGIN caselist BLOCK_ENDS
Rule 23    caselist -> CASE OPEN_PARANTHESIS expression CLOSE_PARANTHESIS block caselist
Rule 24    caselist -> ELSE block
Rule 25    caselist -> empty
Rule 26    ifthen -> IF OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerif Marker block
Rule 27    ifthenelse -> IF OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerif Marker block ELSE Markerelse block
Rule 28    Markerif -> empty
Rule 29    Markerelse -> empty
Rule 30    lastStatement -> LAST SEMICOLON
Rule 31    nextStatement -> NEXT SEMICOLON
Rule 32    functionStatement -> SUB IDENTIFIER block
Rule 33    printStatement -> PRINT OPEN_PARANTHESIS expression CLOSE_PARANTHESIS SEMICOLON
Rule 34    printStatement -> PRINT expression SEMICOLON
Rule 35    returnStatement -> RETURN expression SEMICOLON
Rule 36    assignment -> VARIABLE ASSIGNMENT_OP expression SEMICOLON
Rule 37    assignment -> LOCAL VARIABLE ASSIGNMENT_OP expression SEMICOLON
Rule 38    assignment -> PRIVATE VARIABLE ASSIGNMENT_OP expression SEMICOLON
Rule 39    assignment -> VARIABLE ADV_ASSIGNMENT_OP expression SEMICOLON
Rule 40    declaration -> VARIABLE decList SEMICOLON
Rule 41    declaration -> PRIVATE VARIABLE decList SEMICOLON
Rule 42    declaration -> LOCAL VARIABLE decList SEMICOLON
Rule 43    decList -> COMMA VARIABLE decList
Rule 44    decList -> empty
Rule 45    functionCall -> IDENTIFIER OPEN_PARANTHESIS parameters CLOSE_PARANTHESIS SEMICOLON
Rule 46    term -> functionCall
Rule 47    parameters -> expression COMMA parameters
Rule 48    parameters -> expression
Rule 49    parameters -> empty
Rule 50    whileStatement -> WHILE Marker OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerwhile block
Rule 51    Markerwhile -> empty
Rule 52    forStatement -> FOR OPEN_PARANTHESIS expression SEMICOLON expression SEMICOLON expression CLOSE_PARANTHESIS block
Rule 53    string -> STRING
Rule 54    string -> RES_STRING
Rule 55    number -> NUMBER
Rule 56    number -> SCI_NOT
Rule 57    number -> FLOAT
Rule 58    number -> HEXADECIMAL
Rule 59    number -> OCTAL
Rule 60    term -> number
Rule 61    term -> string
Rule 62    term -> VARIABLE
Rule 63    term -> OPEN_PARANTHESIS expression CLOSE_PARANTHESIS
Rule 64    expression -> PLUS_OP expression
Rule 65    expression -> MINUS_OP expression
Rule 66    expression -> BIT_FLIP expression
Rule 67    expression -> NOT_OP expression
Rule 68    expression -> empty
Rule 69    expression -> term
Rule 70    expression -> expression OR_STR_OP expression
Rule 71    expression -> expression XOR_STR_OP expression
Rule 72    expression -> expression AND_STR_OP expression
Rule 73    expression -> expression NOT_STR_OP expression
Rule 74    expression -> expression COMPARE_OP expression
Rule 75    expression -> expression BIT_OR expression
Rule 76    expression -> expression BIT_XOR expression
Rule 77    expression -> expression BIT_AND expression
Rule 78    expression -> expression AND_OP Marker expression
Rule 79    expression -> expression OR_OP Marker expression
Rule 80    expression -> expression EQUALS_OP expression
Rule 81    expression -> expression NOT_EQUALS_OP expression
Rule 82    expression -> expression GREATER_OP expression
Rule 83    expression -> expression LESS_OP expression
Rule 84    expression -> expression GREATER_EQUAL_OP expression
Rule 85    expression -> expression LESS_EQUAL_OP expression
Rule 86    Marker -> empty
Rule 87    expression -> expression PLUS_OP expression
Rule 88    expression -> expression MINUS_OP expression
Rule 89    expression -> expression MULTIPLICATION_OP expression
Rule 90    expression -> expression DIVISION_OP expression
Rule 91    expression -> expression MODULUS_OP expression
Rule 92    expression -> expression EXPONENT_OP expression
Rule 93    expression -> expression BIT_RIGHT_SHIFT expression
Rule 94    expression -> expression BIT_LEFT_SHIFT expression
Rule 95    expression -> expression CONCATENATE expression
Rule 96    expression -> expression REP_OP expression
Rule 97    expression -> expression COMMA expression
Rule 98    expression -> expression ASSOCIATE_OP expression
Rule 99    expression -> expression RANGE_OP expression
Rule 100   expression -> expression SEARCH_MODIFY expression
Rule 101   expression -> expression SEARCH_MODIFY_NEG expression

Terminals, with rules where they appear

ADV_ASSIGNMENT_OP    : 39
AND_OP               : 78
AND_STR_OP           : 72
ARRAY                : 
ASSIGNMENT_OP        : 36 37 38
ASSOCIATE_OP         : 98
BIT_AND              : 77
BIT_FLIP             : 66
BIT_LEFT_SHIFT       : 94
BIT_OR               : 75
BIT_RIGHT_SHIFT      : 93
BIT_XOR              : 76
BLOCK_BEGIN          : 3 22
BLOCK_ENDS           : 3 22
CASE                 : 23
CLOSE_BRACKET        : 
CLOSE_PARANTHESIS    : 23 26 27 33 45 50 52 63
COLON                : 
COMMA                : 43 47 97
COMMENT              : 
COMPARE_OP           : 74
CONCATENATE          : 95
CONTINUE             : 
DECREMENT_OP         : 
DIVISION_OP          : 90
DO                   : 
ELSE                 : 24 27
ELSIF                : 
EQUALS_OP            : 80
EXPONENT_OP          : 92
FILE_HANDLING_OPTIONS : 
FLOAT                : 57
FOR                  : 52
FOREACH              : 
FORMAT               : 
GOTO                 : 
GREATER_EQUAL_OP     : 84
GREATER_OP           : 82
HASH                 : 
HEXADECIMAL          : 58
IDENTIFIER           : 21 32 45
IF                   : 26 27
INCREMENT_OP         : 
LAST                 : 30
LESS_EQUAL_OP        : 85
LESS_OP              : 83
LOCAL                : 37 42
MATCH                : 
MINUS_OP             : 65 88
MODULUS_OP           : 91
MULTIPLICATION_OP    : 89
NEXT                 : 31
NOT_EQUALS_OP        : 81
NOT_OP               : 67
NOT_STR_OP           : 73
NUMBER               : 55
OCTAL                : 59
OPEN_BRACKET         : 
OPEN_PARANTHESIS     : 23 26 27 33 45 50 52 63
OR_OP                : 79
OR_STR_OP            : 70
PLUS_OP              : 64 87
PRINT                : 33 34
PRIVATE              : 38 41
QUESTION_MARK        : 
RANGE_OP             : 99
REDO                 : 
REP_OP               : 96
RES_STRING           : 54
RETURN               : 35
SCI_NOT              : 56
SEARCH_MODIFY        : 100
SEARCH_MODIFY_NEG    : 101
SELECT               : 
SEMICOLON            : 21 30 31 33 34 35 36 37 38 39 40 41 42 45 52 52
STRING               : 53
SUB                  : 32
SUBSTITUTE           : 
SWITCH               : 22
SYSTEM_COMMAND       : 
TRANSLATION          : 
UNLESS               : 
UNTIL                : 
USE                  : 21
USER_INPUT_OP        : 
VARIABLE             : 36 37 38 39 40 41 42 43 62
WHILE                : 50
WHITESPACE           : 
WRITE                : 
XOR_STR_OP           : 71
error                : 

Nonterminals, with rules where they appear

Marker               : 7 8 9 10 11 12 13 14 15 16 17 18 19 20 26 27 50 78 79
Markerelse           : 27
Markerif             : 26 27
Markerwhile          : 50
assignment           : 7
block                : 1 23 24 26 27 27 32 50 52
caselist             : 22 23
decList              : 40 41 42 43
declaration          : 8
empty                : 25 28 29 44 49 51 68 86
expression           : 22 23 26 27 33 34 35 36 37 38 39 47 48 50 52 52 52 63 64 65 66 67 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101
forStatement         : 12
functionCall         : 10 46
functionStatement    : 14
ifthen               : 17
ifthenelse           : 18
lastStatement        : 15
nextStatement        : 16
number               : 60
parameters           : 45 47
printStatement       : 13
returnStatement      : 9
start                : 0
statement            : 4 5
statements           : 2 3 4
string               : 61
switchStatement      : 20
term                 : 69
useStatement         : 19
whileStatement       : 11

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) start -> . statements
    (3) block -> . BLOCK_BEGIN statements BLOCK_ENDS
    (4) statements -> . statement statements
    (5) statements -> . statement
    (7) statement -> . assignment Marker
    (8) statement -> . declaration Marker
    (9) statement -> . returnStatement Marker
    (10) statement -> . functionCall Marker
    (11) statement -> . whileStatement Marker
    (12) statement -> . forStatement Marker
    (13) statement -> . printStatement Marker
    (14) statement -> . functionStatement Marker
    (15) statement -> . lastStatement Marker
    (16) statement -> . nextStatement Marker
    (17) statement -> . ifthen Marker
    (18) statement -> . ifthenelse Marker
    (19) statement -> . useStatement Marker
    (20) statement -> . switchStatement Marker
    (36) assignment -> . VARIABLE ASSIGNMENT_OP expression SEMICOLON
    (37) assignment -> . LOCAL VARIABLE ASSIGNMENT_OP expression SEMICOLON
    (38) assignment -> . PRIVATE VARIABLE ASSIGNMENT_OP expression SEMICOLON
    (39) assignment -> . VARIABLE ADV_ASSIGNMENT_OP expression SEMICOLON
    (40) declaration -> . VARIABLE decList SEMICOLON
    (41) declaration -> . PRIVATE VARIABLE decList SEMICOLON
    (42) declaration -> . LOCAL VARIABLE decList SEMICOLON
    (35) returnStatement -> . RETURN expression SEMICOLON
    (45) functionCall -> . IDENTIFIER OPEN_PARANTHESIS parameters CLOSE_PARANTHESIS SEMICOLON
    (50) whileStatement -> . WHILE Marker OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerwhile block
    (52) forStatement -> . FOR OPEN_PARANTHESIS expression SEMICOLON expression SEMICOLON expression CLOSE_PARANTHESIS block
    (33) printStatement -> . PRINT OPEN_PARANTHESIS expression CLOSE_PARANTHESIS SEMICOLON
    (34) printStatement -> . PRINT expression SEMICOLON
    (32) functionStatement -> . SUB IDENTIFIER block
    (30) lastStatement -> . LAST SEMICOLON
    (31) nextStatement -> . NEXT SEMICOLON
    (26) ifthen -> . IF OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerif Marker block
    (27) ifthenelse -> . IF OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerif Marker block ELSE Markerelse block
    (21) useStatement -> . USE IDENTIFIER SEMICOLON
    (22) switchStatement -> . SWITCH expression BLOCK_BEGIN caselist BLOCK_ENDS

    BLOCK_BEGIN     shift and go to state 6
    VARIABLE        shift and go to state 29
    LOCAL           shift and go to state 31
    PRIVATE         shift and go to state 15
    RETURN          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    WHILE           shift and go to state 7
    FOR             shift and go to state 24
    PRINT           shift and go to state 8
    SUB             shift and go to state 11
    LAST            shift and go to state 12
    NEXT            shift and go to state 16
    IF              shift and go to state 32
    USE             shift and go to state 2
    SWITCH          shift and go to state 14

    forStatement                   shift and go to state 1
    statements                     shift and go to state 3
    functionStatement              shift and go to state 4
    switchStatement                shift and go to state 5
    ifthen                         shift and go to state 10
    nextStatement                  shift and go to state 13
    start                          shift and go to state 17
    lastStatement                  shift and go to state 18
    useStatement                   shift and go to state 19
    statement                      shift and go to state 20
    printStatement                 shift and go to state 21
    ifthenelse                     shift and go to state 23
    assignment                     shift and go to state 25
    whileStatement                 shift and go to state 26
    functionCall                   shift and go to state 27
    declaration                    shift and go to state 28
    returnStatement                shift and go to state 30
    block                          shift and go to state 33

state 1

    (12) statement -> forStatement . Marker
    (86) Marker -> . empty
    (6) empty -> .

    VARIABLE        reduce using rule 6 (empty -> .)
    LOCAL           reduce using rule 6 (empty -> .)
    PRIVATE         reduce using rule 6 (empty -> .)
    RETURN          reduce using rule 6 (empty -> .)
    IDENTIFIER      reduce using rule 6 (empty -> .)
    WHILE           reduce using rule 6 (empty -> .)
    FOR             reduce using rule 6 (empty -> .)
    PRINT           reduce using rule 6 (empty -> .)
    SUB             reduce using rule 6 (empty -> .)
    LAST            reduce using rule 6 (empty -> .)
    NEXT            reduce using rule 6 (empty -> .)
    IF              reduce using rule 6 (empty -> .)
    USE             reduce using rule 6 (empty -> .)
    SWITCH          reduce using rule 6 (empty -> .)
    $end            reduce using rule 6 (empty -> .)
    BLOCK_ENDS      reduce using rule 6 (empty -> .)

    Marker                         shift and go to state 34
    empty                          shift and go to state 35

state 2

    (21) useStatement -> USE . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 36


state 3

    (2) start -> statements .

    $end            reduce using rule 2 (start -> statements .)


state 4

    (14) statement -> functionStatement . Marker
    (86) Marker -> . empty
    (6) empty -> .

    VARIABLE        reduce using rule 6 (empty -> .)
    LOCAL           reduce using rule 6 (empty -> .)
    PRIVATE         reduce using rule 6 (empty -> .)
    RETURN          reduce using rule 6 (empty -> .)
    IDENTIFIER      reduce using rule 6 (empty -> .)
    WHILE           reduce using rule 6 (empty -> .)
    FOR             reduce using rule 6 (empty -> .)
    PRINT           reduce using rule 6 (empty -> .)
    SUB             reduce using rule 6 (empty -> .)
    LAST            reduce using rule 6 (empty -> .)
    NEXT            reduce using rule 6 (empty -> .)
    IF              reduce using rule 6 (empty -> .)
    USE             reduce using rule 6 (empty -> .)
    SWITCH          reduce using rule 6 (empty -> .)
    $end            reduce using rule 6 (empty -> .)
    BLOCK_ENDS      reduce using rule 6 (empty -> .)

    Marker                         shift and go to state 37
    empty                          shift and go to state 35

state 5

    (20) statement -> switchStatement . Marker
    (86) Marker -> . empty
    (6) empty -> .

    VARIABLE        reduce using rule 6 (empty -> .)
    LOCAL           reduce using rule 6 (empty -> .)
    PRIVATE         reduce using rule 6 (empty -> .)
    RETURN          reduce using rule 6 (empty -> .)
    IDENTIFIER      reduce using rule 6 (empty -> .)
    WHILE           reduce using rule 6 (empty -> .)
    FOR             reduce using rule 6 (empty -> .)
    PRINT           reduce using rule 6 (empty -> .)
    SUB             reduce using rule 6 (empty -> .)
    LAST            reduce using rule 6 (empty -> .)
    NEXT            reduce using rule 6 (empty -> .)
    IF              reduce using rule 6 (empty -> .)
    USE             reduce using rule 6 (empty -> .)
    SWITCH          reduce using rule 6 (empty -> .)
    $end            reduce using rule 6 (empty -> .)
    BLOCK_ENDS      reduce using rule 6 (empty -> .)

    Marker                         shift and go to state 38
    empty                          shift and go to state 35

state 6

    (3) block -> BLOCK_BEGIN . statements BLOCK_ENDS
    (4) statements -> . statement statements
    (5) statements -> . statement
    (7) statement -> . assignment Marker
    (8) statement -> . declaration Marker
    (9) statement -> . returnStatement Marker
    (10) statement -> . functionCall Marker
    (11) statement -> . whileStatement Marker
    (12) statement -> . forStatement Marker
    (13) statement -> . printStatement Marker
    (14) statement -> . functionStatement Marker
    (15) statement -> . lastStatement Marker
    (16) statement -> . nextStatement Marker
    (17) statement -> . ifthen Marker
    (18) statement -> . ifthenelse Marker
    (19) statement -> . useStatement Marker
    (20) statement -> . switchStatement Marker
    (36) assignment -> . VARIABLE ASSIGNMENT_OP expression SEMICOLON
    (37) assignment -> . LOCAL VARIABLE ASSIGNMENT_OP expression SEMICOLON
    (38) assignment -> . PRIVATE VARIABLE ASSIGNMENT_OP expression SEMICOLON
    (39) assignment -> . VARIABLE ADV_ASSIGNMENT_OP expression SEMICOLON
    (40) declaration -> . VARIABLE decList SEMICOLON
    (41) declaration -> . PRIVATE VARIABLE decList SEMICOLON
    (42) declaration -> . LOCAL VARIABLE decList SEMICOLON
    (35) returnStatement -> . RETURN expression SEMICOLON
    (45) functionCall -> . IDENTIFIER OPEN_PARANTHESIS parameters CLOSE_PARANTHESIS SEMICOLON
    (50) whileStatement -> . WHILE Marker OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerwhile block
    (52) forStatement -> . FOR OPEN_PARANTHESIS expression SEMICOLON expression SEMICOLON expression CLOSE_PARANTHESIS block
    (33) printStatement -> . PRINT OPEN_PARANTHESIS expression CLOSE_PARANTHESIS SEMICOLON
    (34) printStatement -> . PRINT expression SEMICOLON
    (32) functionStatement -> . SUB IDENTIFIER block
    (30) lastStatement -> . LAST SEMICOLON
    (31) nextStatement -> . NEXT SEMICOLON
    (26) ifthen -> . IF OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerif Marker block
    (27) ifthenelse -> . IF OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerif Marker block ELSE Markerelse block
    (21) useStatement -> . USE IDENTIFIER SEMICOLON
    (22) switchStatement -> . SWITCH expression BLOCK_BEGIN caselist BLOCK_ENDS

    VARIABLE        shift and go to state 29
    LOCAL           shift and go to state 31
    PRIVATE         shift and go to state 15
    RETURN          shift and go to state 9
    IDENTIFIER      shift and go to state 22
    WHILE           shift and go to state 7
    FOR             shift and go to state 24
    PRINT           shift and go to state 8
    SUB             shift and go to state 11
    LAST            shift and go to state 12
    NEXT            shift and go to state 16
    IF              shift and go to state 32
    USE             shift and go to state 2
    SWITCH          shift and go to state 14

    forStatement                   shift and go to state 1
    statements                     shift and go to state 39
    functionStatement              shift and go to state 4
    switchStatement                shift and go to state 5
    ifthen                         shift and go to state 10
    nextStatement                  shift and go to state 13
    lastStatement                  shift and go to state 18
    useStatement                   shift and go to state 19
    statement                      shift and go to state 20
    printStatement                 shift and go to state 21
    ifthenelse                     shift and go to state 23
    assignment                     shift and go to state 25
    whileStatement                 shift and go to state 26
    functionCall                   shift and go to state 27
    declaration                    shift and go to state 28
    returnStatement                shift and go to state 30

state 7

    (50) whileStatement -> WHILE . Marker OPEN_PARANTHESIS expression CLOSE_PARANTHESIS Markerwhile block
    (86) Marker -> . empty
    (6) empty -> .

    OPEN_PARANTHESIS reduce using rule 6 (empty -> .)

    Marker                         shift and go to state 40
    empty                          shift and go to state 35

state 8

    (33) printStatement -> PRINT . OPEN_PARANTHESIS expression CLOSE_PARANTHESIS SEMICOLON
    (34) printStatement -> PRINT . expression SEMICOLON
    (64) expression -> . PLUS_OP expression
    (65) expression -> . MINUS_OP expression
    (66) expression -> . BIT_FLIP expression
    (67) expression -> . NOT_OP expression
    (68) expression -> . empty
    (69) expression -> . term
    (70) expression -> . expression OR_STR_OP expression
    (71) expression -> . expression XOR_STR_OP expression
    (72) expression -> . expression AND_STR_OP expression
    (73) expression -> . expression NOT_STR_OP expression
    (74) expression -> . expression COMPARE_OP expression
    (75) expression -> . expression BIT_OR expression
    (76) expression -> . expression BIT_XOR expression
    (77) expression -> . expression BIT_AND expression
    (78) expression -> . expression AND_OP Marker expression
    (79) expression -> . expression OR_OP Marker expression
    (80) expression -> . expression EQUALS_OP expression
    (81) expression -> . expression NOT_EQUALS_OP expression
    (82) expression -> . expression GREATER_OP expression
    (83) expression -> . expression LESS_OP expression
    (84) expression -> . expression GREATER_EQUAL_OP expression
    (85) expression -> . expression LESS_EQUAL_OP expression
    (87) expression -> . expression PLUS_OP expression
    (88) expression -> . expression MINUS_OP expression
    (89) expression -> . expression MULTIPLICATION_OP expression
    (90) expression -> . expression DIVISION_OP expression
    (91) expression -> . expression MODULUS_OP expression
    (92) expression -> . expression EXPONENT_OP expression
    (93) expression -> . expression BIT_RIGHT_SHIFT expression
    (94) expression -> . expression BIT_LEFT_SHIFT expression
    (95) expression -> . expression CONCATENATE expression
    (96) expression -> . expression REP_OP expression
    (97) expression -> . expression COMMA expression
    (98) expression -> . expression ASSOCIATE_OP expression
    (99) expression -> . expression RANGE_OP expression
    (100) expression -> . expression SEARCH_MODIFY expression
    (101) expression -> . expression SEARCH_MODIFY_NEG expression
    (6) empty -> .
    (46) term -> . functionCall
    (60) term -> . number
    (61) term -> . string
    (62) term -> . VARIABLE
    (63) term -> . OPEN_PARANTHESIS expression CLOSE_PARANTHESIS
    (45) functionCall -> . IDENTIFIER OPEN_PARANTHESIS parameters CLOSE_PARANTHESIS SEMICOLON
    (55) number -> . NUMBER
    (56) number -> . SCI_NOT
    (57) number -> . FLOAT
    (58) number -> . HEXADECIMAL
    (59) number -> . OCTAL
    (53) string -> . STRING
    (54) string -> . RES_STRING

    OPEN_PARANTHESIS shift and go to state 41
    PLUS_OP         shift and go to state 58
    MINUS_OP        shift and go to state 42
    BIT_FLIP        shift and go to state 47
    NOT_OP          shift and go to state 44
    SEMICOLON       reduce using rule 6 (empty -> .)
    OR_STR_OP       reduce using rule 6 (empty -> .)
    XOR_STR_OP      reduce using rule 6 (empty -> .)
    AND_STR_OP      reduce using rule 6 (empty -> .)
    NOT_STR_OP      reduce using rule 6 (empty -> .)
    COMPARE_OP      reduce using rule 6 (empty -> .)
    BIT_OR          reduce using rule 6 (empty -> .)
    BIT_XOR         reduce using rule 6 (empty -> .)
    BIT_AND         reduce using rule 6 (empty -> .)
    AND_OP          reduce using rule 6 (empty -> .)
    OR_OP           reduce using rule 6 (empty -> .)
    EQUALS_OP       reduce using rule 6 (empty -> .)
    NOT_EQUALS_OP   reduce using rule 6 (empty -> .)
    GREATER_OP      reduce using rule 6 (empty -> .)
    LESS_OP         reduce using rule 6 (empty -> .)
    GREATER_EQUAL_OP reduce using rule 6 (empty -> .)
    LESS_EQUAL_OP   reduce using rule 6 (empty -> .)
    MULTIPLICATION_OP reduce using rule 6 (empty -> .)
    DIVISION_OP     reduce using rule 6 (empty -> .)
    MODULUS_OP      reduce using rule 6 (empty -> .)
    EXPONENT_OP     reduce using rule 6 (empty -> .)
    BIT_RIGHT_SHIFT reduce using rule 6 (empty -> .)
    BIT_LEFT_SHIFT  reduce using rule 6 (empty -> .)
    CONCATENATE     reduce using rule 6 (empty -> .)
    REP_OP          reduce using rule 6 (empty -> .)
    COMMA           reduce using rule 6 (empty -> .)
    ASSOCIATE_OP    reduce using rule 6 (empty -> .)
    RANGE_OP        reduce using rule 6 (empty -> .)
    SEARCH_MODIFY   reduce using rule 6 (empty -> .)
    SEARCH_MODIFY_NEG reduce using rule 6 (empty -> .)
    VARIABLE        shift and go to state 54
    IDENTIFIER      shift and go to state 22
    NUMBER          shift and go to state 51
    SCI_NOT         shift and go to state 53
    FLOAT           shift and go to state 57
    HEXADECIMAL     shift and go to state 45
    OCTAL           shift and go to state 56
    STRING          shift and go to state 48
    RES_STRING      shift and go to state 50

  ! PLUS_OP         [ reduce using rule 6 (empty -> .) ]
  ! MINUS_OP        [ reduce using rule 6 (empty -> .) ]

    term                           shift and go to state 55
    string                         shift and go to state 46
    number                         shift and go to state 43
    functionCall                   shift and go to state 52
    expression                     shift and go to state 59
    empty                          shift and go to state 49

state 9

    (35) returnStatement -> RETURN . expression SEMICOLON
    (64) expression -> . PLUS_OP expression
    (65) expression -> . MINUS_OP expression
    (66) expression -> . BIT_FLIP expression
    (67) expression -> . NOT_OP expression
    (68) expression -> . empty
    (69) expression -> . term
    (70) expression -> . expression OR_STR_OP expression
    (71) expression -> . expression XOR_STR_OP expression
    (72) expression -> . expression AND_STR_OP expression
    (73) expression -> . expression NOT_STR_OP expression
    (74) expression -> . expression COMPARE_OP expression
    (75) expression -> . expression BIT_OR expression
    (76) expression -> . expression BIT_XOR expression
    (77) expression -> . expression BIT_AND expression
    (78) expression -> . expression AND_OP Marker expression
    (79) expression -> . expression OR_OP Marker expression
    (80) expression -> . expression EQUALS_OP expression
    (81) expression -> . expression NOT_EQUALS_OP expression
    (82) expression -> . expression GREATER_OP expression
    (83) expression -> . expression LESS_OP expression
    (84) expression -> . expression GREATER_EQUAL_OP expression
    (85) expression -> . expression LESS_EQUAL_OP expression
    (87) expression -> . expression PLUS_OP expression
    (88) expression -> . expression MINUS_OP expression
    (89) expression -> . expression MULTIPLICATION_OP expression
    (90) expression -> . expression DIVISION_OP expression
    (91) expression -> . expression MODULUS_OP expression
    (92) expression -> . expression EXPONENT_OP expression
    (93) expression -> . expression BIT_RIGHT_SHIFT expression
    (94) expression -> . expression BIT_LEFT_SHIFT expression
    (95) expression -> . expression CONCATENATE expression
    (96) expression -> . expression REP_OP expression
    (97) expression -> . expression COMMA expression
    (98) expression -> . expression ASSOCIATE_OP expression
    (99) expression -> . expression RANGE_OP expression
    (100) expression -> . expression SEARCH_MODIFY expression
    (101) expression -> . expression SEARCH_MODIFY_NEG expression
    (6) empty -> .
    (46) term -> . functionCall
    (60) term -> . number
    (61) term -> . string
    (62) term -> . VARIABLE
    (63) term -> . OPEN_PARANTHESIS expression CLOSE_PARANTHESIS
    (45) functionCall -> . IDENTIFIER OPEN_PARANTHESIS parameters CLOSE_PARANTHESIS SEMICOLON
    (55) number -> . NUMBER
    (56) number -> . SCI_NOT
    (57) number -> . FLOAT
    (58) number -> . HEXADECIMAL
    (59) number -> . OCTAL
    (53) string -> . STRING
    (54) string -> . RES_STRING

    PLUS_OP         shift and go to state 58
    MINUS_OP        shift and go to state 42
    BIT_FLIP        shift and go to state 47
    NOT_OP          shift and go to state 44
    SEMICOLON       reduce using rule 6 (empty -> .)
    OR_STR_OP       reduce using rule 6 (empty -> .)
    XOR_STR_OP      reduce using rule 6 (empty -> .)
    AND_STR_OP      reduce using rule 6 (empty -> .)
    NOT_STR_OP      reduce using rule 6 (empty -> .)
    COMPARE_OP      reduce using rule 6 (empty -> .)
    BIT_OR          reduce using rule 6 (empty -> .)
    BIT_XOR         reduce using rule 6 (empty -> .)
    BIT_AND         reduce using rule 6 (empty -> .)
    AND_OP          reduce using rule 6 (empty -> .)
    OR_OP           reduce using rule 6 (empty -> .)
    EQUALS_OP       reduce using rule 6 (empty -> .)
    NOT_EQUALS_OP   reduce using rule 6 (empty -> .)
    GREATER_OP      reduce using rule 6 (empty -> .)
    LESS_OP         reduce using rule 6 (empty -> .)
    GREATER_EQUAL_OP reduce using rule 6 (empty -> .)
    LESS_EQUAL_OP   reduce using rule 6 (empty -> .)
    MULTIPLICATION_OP reduce using rule 6 (empty -> .)
    DIVISION_OP     reduce using rule 6 (empty -> .)
    MODULUS_OP      reduce using rule 6 (empty -> .)
    EXPONENT_OP     reduce using rule 6 (empty -> .)
    BIT_RIGHT_SHIFT reduce using rule 6 (empty -> .)
    BIT_LEFT_SHIFT  reduce using rule 6 (empty -> .)
    CONCATENATE     reduce using rule 6 (empty -> .)
    REP_OP          reduce using rule 6 (empty -> .)
    COMMA           reduce using rule 6 (empty -> .)
    ASSOCIATE_OP    reduce using rule 6 (empty -> .)
    RANGE_OP        reduce using rule 6 (empty -> .)
    SEARCH_MODIFY   reduce using rule 6 (empty -> .)
    SEARCH_MODIFY_NEG reduce using rule 6 (empty -> .)
    VARIABLE        shift and go to state 54
    OPEN_PARANTHESIS shift and go to state 60
    IDENTIFIER      shift and go to state 22
    NUMBER          shift and go to state 51
    SCI_NOT         shift and go to state 53
    FLOAT           shift and go to state 57
    HEXADECIMAL     shift and go to state 45
    OCTAL           shift and go to state 56
    STRING          shift and go to state 48
    RES_STRING      shift and go to state 50

  ! PLUS_OP         [ reduce using rule 6 (empty -> .) ]
  ! MINUS_OP        [ reduce using rule 6 (empty -> .) ]

    term                           shift and go to state 55
    string                         shift and go to state 46
    number                         shift and go to state 43
    functionCall                   shift and go to state 52
    expression                     shift and go to state 61
    empty                          shift and go to state 49

state 10

    (17) statement -> ifthen . Marker
    (86) Marker -> . empty
    (6) empty -> .

    VARIABLE        reduce using rule 6 (empty -> .)
    LOCAL           reduce using rule 6 (empty -> .)
    PRIVATE         reduce using rule 6 (empty -> .)
    RETURN          reduce using rule 6 (empty -> .)
    IDENTIFIER      reduce using rule 6 (empty -> .)
    WHILE           reduce using rule 6 (empty -> .)
    FOR             reduce using rule 6 (empty -> .)
    PRINT           reduce using rule 6 (empty -> .)
    SUB             reduce using rule 6 (empty -> .)
    LAST            reduce using rule 6 (empty -> .)
    NEXT            reduce using rule 6 (empty -> .)
    IF              reduce using rule 6 (empty -> .)
    USE             reduce using rule 6 (empty -> .)
    SWITCH          reduce using rule 6 (empty -> .)
    $end            reduce using rule 6 (empty -> .)
    BLOCK_ENDS      reduce using rule 6 (empty -> .)

    Marker                         shift and go to state 62
    empty                          shift and go to state 35

state 11

    (32) functionStatement -> SUB . IDENTIFIER block

    IDENTIFIER      shift and go to state 63


state 12

    (30) lastStatement -> LAST . SEMICOLON

    SEMICOLON       shift and go to state 64


state 13

    (16) statement -> nextStatement . Marker
    (86) Marker -> . empty
    (6) empty -> .
